--- a/.github/test.yml
+++ b/.github/test.yml
@@ -2,14 +2,9 @@ name: Baseline Scan
 
 on: workflow_dispatch
 
-jobs:
-  do_baesline:
-    name: Do baseline
-    runs-on: ubuntu-latest
-      - name: Run OWASP Action
-        id: run_owasp
-        uses: zaproxy/action-baseline@v0.4.0
-        with:
-          target: 'https://example.com'
-          cmd_options: 'dev-baseline.html'
-          token: ""
+steps:
+  - name: ZAP Scan
+    uses: zaproxy/action-baseline@v0.4.0
+    with:
+      target: 'https://www.zaproxy.org'
+      token: ""
