--- a/.github/test.yml
+++ b/.github/test.yml
@@ -1,10 +1,20 @@
-name: Baseline Scan
+name: Manually triggered workflow
+on:
+  workflow_dispatch:
+    inputs:
+      name:
+        description: 'Person to greet'
+        required: true
+        default: 'Mona the Octocat'
+      home:
+        description: 'location'
+        required: false
+        default: 'The Octoverse'
 
-on: workflow_dispatch
-
-steps:
-  - name: ZAP Scan
-    uses: zaproxy/action-baseline@v0.4.0
-    with:
-      target: 'https://www.zaproxy.org'
-      token: ""
+jobs:
+  say_hello:
+    runs-on: ubuntu-latest
+    steps:
+      - run: |
+          echo "Hello ${{ github.event.inputs.name }}!"
+          echo "- in ${{ github.event.inputs.home }}!"
