--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,9 +2,11 @@ name: Baseline Scan
 
 on: workflow_dispatch
 
-steps:
-  - name: ZAP Scan
-    uses: zaproxy/action-baseline@v0.4.0
-    with:
-      target: 'https://www.zaproxy.org'
-      token: ""
+jobs:
+  do_baseline:
+  steps:
+    - name: ZAP Scan
+      uses: zaproxy/action-baseline@v0.4.0
+      with:
+        target: 'https://www.zaproxy.org'
+        token: ""
