--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,7 +5,7 @@ on: workflow_dispatch
 jobs:
   do_baseline:
   steps:
-  - name: ZAP Scan
+  - name: 'ZAP Scan'
     uses: zaproxy/action-baseline@v0.4.0
     with:
       target: 'https://www.zaproxy.org'
