--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,9 +4,11 @@ on: workflow_dispatch
 
 jobs:
   do_baseline:
-  steps:
-  - name: 'ZAP Scan'
-    uses: zaproxy/action-baseline@v0.4.0
-    with:
-      target: 'https://www.zaproxy.org'
-      token: ""
+    name: do_baseline
+    runs-on: ubuntu-latest
+    steps:
+    - name: 'ZAP Scan'
+      uses: zaproxy/action-baseline@v0.4.0
+      with:
+        target: 'https://www.zaproxy.org'
+        token: ""
