--- a/.github/workflows/link.yml
+++ b/.github/workflows/link.yml
@@ -15,5 +15,6 @@ jobs:
           TARGET: |
             - https://www.zaproxy.org/evangelists/
             - https://www.zaproxy.org/student-hall-of-fame/
+            - kingthorin.github.io/test/
             - https://owasp.org/www-community/fail
           RECURSIVE: false
